added section titles on index.html and INFO section on readme.md

--- a/assets/css/scss/_var.scss
+++ b/assets/css/scss/_var.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Lato');
-@import 'https://fonts.googleapis.com/css?family=Raleway:100,300';
+@import 'https://fonts.googleapis.com/css?family=Raleway:100,400';
 @import 'https://fonts.googleapis.com/css?family=Open+Sans:400,600,700';
 
 // general colors and controls
@@ -17,6 +17,6 @@ $color-sec: #234ba7;
 $color-accent: #dddce4;
 
 // fonts
-$titlesFont: 'Open Sans', sans-serif;
+$titlesFont: 'Raleway', sans-serif;
 $readFont: 'Open Sans', sans-serif;
 $controlsFont: $readFont;
