--- a/assets/css/scss/_card-component.scss
+++ b/assets/css/scss/_card-component.scss
@@ -12,7 +12,7 @@
   padding: 25px 30px 25px 20px;
   box-sizing:border-box;
   * {
-    box-sizing:border-box
+    box-sizing:border-box;
   }
   .card-img {
     margin-right: 25px;
