--- a/assets/css/scss/_typography.scss
+++ b/assets/css/scss/_typography.scss
@@ -1,3 +1,16 @@
+h1 {
+  font-size: 3rem;
+  font-family: $titlesFont;
+}
+h2 {
+  font-size: 2rem;
+  font-family: $titlesFont;
+  text-align: center;
+  max-width: 300px;
+  margin: 0 auto 3rem auto;
+  padding-bottom: 8px;
+  box-shadow: 0 1px 0 $color-black;
+}
 p {
 	font-family: $readFont;
 	font-size: 1.2rem;
